add ability to search to search-movie-api

--- a/src/app/components/search-movie-api/search-movie-api.component.html
+++ b/src/app/components/search-movie-api/search-movie-api.component.html
@@ -1,3 +1,11 @@
 <p>
   search-movie-api works!
 </p>
+
+<form (ngSubmit)="onSubmit(movieTitle)" #movieTitle="ngForm">
+  <label for="title">Movie:</label>
+  <input type="text"  class="form-control" name="title" ngModel autofocus required>
+  <button type="submit">Search</button>
+</form>
+
+<app-movies *ngIf="movieList != null" [moviesList]="movieList"></app-movies>
