add movie-detail component

--- a/src/app/components/movie-detail/movie-detail.component.html
+++ b/src/app/components/movie-detail/movie-detail.component.html
@@ -1,3 +1,24 @@
 <p>
   movie-detail works!
 </p>
+<pre>
+  <img src="{{movie.Poster}}" alt="">
+Actors: {{movie.Actors}}
+Country: {{movie.Country}}
+DVD: {{movie.DVD}}
+Director: {{movie.Director}}
+Genre: {{movie.Genre}}
+Language: {{movie.Language}}
+Plot: {{movie.Plot}}
+Poster: {{movie.Poster}}
+Production: {{movie.Production}}
+Rated: {{movie.Rated}}
+Released: {{movie.Released}}
+Runtime: {{movie.Runtime}}
+Title: {{movie.Title}}
+Type: {{movie.Type}}
+Writer: {{movie.Writer}}
+Year: {{movie.Year}}
+imdbID: {{movie.imdbID}}
+imdbRating: {{movie.imdbRating}}
+</pre>
