add addMovieToCollection and getMovieByIImdbId to movies.component

--- a/src/app/components/movies/movies.component.html
+++ b/src/app/components/movies/movies.component.html
@@ -9,6 +9,6 @@
     {{movie.Year}}
     <!-- {{movie.imdbID}}   -->
   </pre>
-  <button (click)="addMovieToCoollection(movie.imdbID)">Add</button>
+  <button (click)="addMovieToCollection(movie.imdbID)">Add</button>
   <button (click)="navigateToMovieDetail(movie.imdbID)">View Details</button>
 </div>
